# tools

crates/rome_cli/: Cargo.toml
crates/rome_cli/src/: lib.rs
crates/rome_cli/src/commands/: format.rs
crates/rome_cli/tests/: main.rs
crates/rome_console/: Cargo.toml
crates/rome_console/src/: lib.rs
crates/rome_formatter/src/: formatter.rs  formatter_traits.rs  lib.rs
crates/rome_formatter/src/jsx/auxiliary/: name.rs  text.rs
crates/rome_formatter/src/jsx/expressions/: tag_expression.rs
crates/rome_formatter/src/jsx/tag/: closing_element.rs  element.rs  opening_element.rs
crates/rome_formatter/src/utils/: mod.rs
crates/rome_formatter/tests/: spec_test.rs
crates/rome_formatter/tests/specs/js/module/: with.js.snap
crates/rome_formatter/tests/specs/js/module/import/: default_import.js.snap
crates/rome_formatter/tests/specs/jsx/expressions/: tag_expression.jsx.snap.new  tag_expression_simple.jsx  tag_expression_simple.jsx.snap.new  tag_expression_with_text.jsx
crates/rome_js_formatter/: Cargo.toml
crates/rome_js_formatter/src/jsx/auxiliary/: text.rs
crates/rome_js_formatter/src/jsx/expressions/: tag_expression.rs
crates/rome_js_formatter/src/jsx/lists/: child_list.rs
crates/rome_js_formatter/src/jsx/tag/: element.rs  opening_element.rs
crates/rome_js_syntax/src/: util.rs
crates/rome_rowan/src/: api.rs  cursor.rs
crates/rslint_parser/src/: lossless_tree_sink.rs  tests.rs  token_source.rs
crates/rslint_parser/src/syntax/: class.rs  function.rs  stmt.rs  typescript.rs
xtask/codegen/: js.ungram
(+13 files in other folders)
