[package]
name = "rome_console"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rslint_errors = { path = "../rslint_errors" }
rome_markup = { version = "0.0.0", path = "../rome_markup" }
lazy_static = "1.4.0"
termcolor = "1.1.2"

[dev-dependencies]
trybuild = "1.0"
